<resources>
    <string name="app_name">Tarnhelm</string>
    <string name="app_description">The magic to clean sharing links up.</string>
    <string name="tarnhelm_shortcuts">Process Clipboard</string>
    <string name="copy_label">Tarnhelm Copy</string>
    <string name="read_only_toast">Read only text</string>
    <string name="rule_added_toast">\"%s\" added</string>
    <string name="rule_added_failed_toast">Add failed. Wrong format?</string>
    <string name="clipboard_service_channel_name">Background Monitoring</string>
    <string name="process_result_channel_name">Process Result</string>
    <string name="clipboard_service_started">Background Monitoring enabled</string>
    <string name="clipboard_service_summary">Tap for more information</string>
    <string name="clipboard_service_permission_needed">Shizuku permission is needed</string>
    <string name="process_result_processing">😇 Processing underway</string>
    <string name="process_result_success">🥳 Processed successfully</string>
    <string name="process_result_failed">🥲 Processing failed</string>

    <string name="mainStatusTitle">Status</string>
    <string name="mainStatusErrorSummary">No work mode enabled</string>
    <string name="mainStatusPassSummary">Working on %s mode</string>
    <string name="mainStatusPunctuation">,\u0020</string>
    <string name="mainStatusPunctuationLast">\u0020and\u0020</string>
    <string name="mainStatusWorkModeEditTextMenu">EditText Menu</string>
    <string name="mainStatusWorkModeCopyMenu">Copy Menu</string>
    <string name="mainStatusWorkModeShare">Sharing Dialog</string>
    <string name="mainStatusBackgroundMonitoring">Background Monitoring</string>
    <string name="mainStatusWorkModeXposed">Xposed</string>
    <string name="mainRulesTitle">Rules</string>
    <string name="mainRulesSummary">%s rule(s) recorded</string>
    <string name="mainExtensionsTitle">Extensions (WIP)</string>
    <string name="mainExtensionsSummary">%s extension(s) recorded</string>
    <string name="mainSettingsTitle">Settings</string>
    <string name="mainShareTitle">Share</string>
    <string name="mainAboutTitle">About</string>
    <string name="mainRankToast">Like it? Please rank us at App Store!</string>
    <string name="mainRankToastAction">Rank</string>
    <string name="mainRequestPermissionFailedToast">You should grant this permission to continue</string>
    <string name="mainPrivacyPolicyDialogTitle">Privacy Policy</string>
    <string name="mainPrivacyPolicyDialogContent">According to the requirements of the Chinese application market, Please read the <a href="https://tarnhelm.project.ac.cn/privacy.html">Privacy Policy</a> and agree it before start.</string>
    <string name="mainPrivacyPolicyDialogPositiveButton">Agree</string>
    <string name="mainPrivacyPolicyDialogNegativeButton">Disagree</string>

    <string name="aboutViewSourceCode"><![CDATA[View source code at %s]]></string>

    <string name="rulesTitle">Rules</string>
    <string name="rulesParametersTitle">Parameters</string>
    <string name="rulesRegexesTitle">Regexes</string>
    <string name="rulesRedirectsTitle">Redirects</string>
    <string name="rulesAddFab">Add</string>
    <string name="rulesPasteFailedToast">Paste failed. Wrong format?</string>

    <string name="parameterRulesAddDialogTitle">Add a Parameter Rule</string>
    <string name="parameterRulesEditDialogTitle">Edit a Parameter Rule</string>
    <string name="parameterRulesItemMode">Mode</string>
    <string name="parameterRulesItemWhiteListMode">White list</string>
    <string name="parameterRulesItemBlackListMode">Black list</string>
    <string name="parameterRulesItemDescription">Description</string>
    <string name="parameterRulesItemDomain">Domain</string>
    <string name="parameterRulesItemParameters">Parameters</string>
    <string name="parameterRulesItemAuthor">Author</string>
    <string name="parameterRulesDialogPositiveButton">OK</string>

    <string name="regexRulesAddDialogTitle">Add a Regex Rule</string>
    <string name="regexRulesEditDialogTitle">Edit a Regex Rule</string>
    <string name="regexRulesItemDescription">Description</string>
    <string name="regexRulesItemRegexes">Regexes</string>
    <string name="regexRulesItemReplacements">Replacements</string>
    <string name="regexRulesItemAuthor">Author</string>
    <string name="regexRulesDialogPositiveButton">OK</string>

    <string name="redirectRulesAddDialogTitle">Add a Redirect Rule</string>
    <string name="redirectRulesEditDialogTitle">Edit a Redirect Rule</string>
    <string name="redirectRulesItemDescription">Description</string>
    <string name="redirectRulesItemDomain">Domain</string>
    <string name="redirectRulesItemUserAgent">User Agent</string>
    <string name="redirectRulesItemAuthor">Author</string>
    <string name="redirectRulesDialogPositiveButton">OK</string>

    <string name="extensionsTitle">Extensions</string>
    <string name="extensionsImportFab">Import</string>
    <string name="extensionsItemName">Name</string>
    <string name="extensionsItemDescription">Description</string>
    <string name="extensionsItemRegexes">Regexes</string>
    <string name="extensionsItemAuthor">Author</string>

    <string name="settingsTitle">Settings</string>
    <string name="settingsWorkModeTitle">Work Mode</string>
    <string name="settingsWorkModeEditTextMenu">EditText Menu</string>
    <string name="settingsWorkModeEditTextMenuSummary">Click \"Tarnhelm\" in the editable EditText</string>
    <string name="settingsWorkModeCopyMenu">Copy Menu</string>
    <string name="settingsWorkModeCopyMenuSummary">Click \"Tarnhelm Copy\" after selecting</string>
    <string name="settingsWorkModeShare">Sharing Dialog</string>
    <string name="settingsWorkModeShareSummary">Check \"Tarnhelm\" on sharing dialog</string>
    <string name="settingsWorkModeBackgroundMonitoring">Background Monitoring</string>
    <string name="settingsWorkModeBackgroundMonitoringSummary">Process contents in background real time</string>
    <string name="settingsWorkModeBackgroundMonitoringToast">Shizuku permission is needed</string>
    <string name="settingsWorkModeXposed">Xposed</string>
    <string name="settingsWorkModeXposedSummary">Hook framework to modify clipboard</string>
    <string name="settingsWorkModeOpenLSPosedToast">Activate in LSPosed and reboot to modify</string>
    <string name="settingsWorkModeRecommendationToast">Recommend to only enable one of Background Monitoring or Xposed</string>
    <string name="settingsXposedTitle">Xposed</string>
    <string name="settingsXposedRewriteClipboard">Rewrite clipboard</string>
    <string name="settingsXposedOverrideClipboardOverlay">Override clipboard overlay</string>
    <string name="settingsNotification">Notification</string>
    <string name="settingsNotificationAlwaysSendProcessingNotification">Always send processing notifications</string>
    <string name="settingsNotificationAlwaysSendProcessingNotificationSummary">Even if no time-consuming operations involved</string>
    <string name="settingsNotificationSystemNotificationSettings">More settings</string>
    <string name="settingsBehavior">Behavior</string>
    <string name="settingsBehaviorExportRulesAsLink">Export rules as link</string>
    <string name="settingsBehaviorExportRulesAsLinkSummary">Add \"tarnhelm://\" on exported rules</string>
    <string name="settingsBehaviorEnableDefaultUA">Use Default UA</string>
    <string name="settingsBehaviorEnableDefaultUASummary">Use System WebView UA in HTTP Request if the rule not specified an UA</string>
    <string name="settingsBehaviorOverrideUA">Override UA</string>
    <string name="settingsBehaviorOverrideUASummary">Specify an UA to override any existing UA (leave empty to disable)</string>
    <string name="settingsOthersTitle">Others</string>
    <string name="settingsOthersBackupAndRestore">Backup &amp; restore</string>
    <string name="settingsOthersWebSite">Website</string>
    <string name="settingsOthersWebsiteSummary">tarnhelm.project.ac.cn</string>
    <string name="settingsOthersTelegramChannel">Telegram Channel</string>
    <string name="settingsOthersTelegramChannelSummary">\@tarnhelm_app</string>
    <string name="settingsOthersTranslator">Translator</string>
    <string name="settingsOthersTranslatorSummary">lz233</string>

    <string name="backupTitle">Backup &amp; Restore</string>
    <string name="backupSummary">Tarnhelm\'s data can be correctly handled by Android system. In most cases, this can be done using Google Cloud Backup or ADB.\nIf you still want to backup or restore your data manually, please continue below.</string>
    <string name="backupWarning">This is a hard backup and does not guarantee data restored, nor does it perform any checks on the backup file, use it with caution.</string>
    <string name="backupBackupButton">Backup</string>
    <string name="backupRestoreButton">Restore</string>
    <string name="backupRequestPermissionFailedToast">You should grant this permission to continue</string>
    <string name="backupSaveViaSAFTitle">Save to storage</string>
</resources>