<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settingsWorkModeTitle">

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:key="workModeEditTextMenu"
            android:summary="@string/settingsWorkModeEditTextMenuSummary"
            android:title="@string/settingsWorkModeEditTextMenu" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:key="workModeCopyMenu"
            android:summary="@string/settingsWorkModeCopyMenuSummary"
            android:title="@string/settingsWorkModeCopyMenu" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:key="workModeShare"
            android:summary="@string/settingsWorkModeShareSummary"
            android:title="@string/settingsWorkModeShare" />

        <rikka.material.preference.MaterialSwitchPreference
            android:key="workModeBackgroundMonitoring"
            android:summary="@string/settingsWorkModeBackgroundMonitoringSummary"
            android:title="@string/settingsWorkModeBackgroundMonitoring" />

        <rikka.material.preference.MaterialSwitchPreference
            android:key="workModeXposed"
            android:summary="@string/settingsWorkModeXposedSummary"
            android:title="@string/settingsWorkModeXposed" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="xposed"
        android:title="@string/settingsXposedTitle">

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:key="rewriteClipboard"
            android:title="@string/settingsXposedRewriteClipboard" />

        <rikka.material.preference.MaterialSwitchPreference
            android:key="overrideClipboardOverlay"
            android:title="@string/settingsXposedOverrideClipboardOverlay" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settingsNotification">

        <rikka.material.preference.MaterialSwitchPreference
            android:key="alwaysSendProcessingNotification"
            android:summary="@string/settingsNotificationAlwaysSendProcessingNotificationSummary"
            android:title="@string/settingsNotificationAlwaysSendProcessingNotification" />

        <Preference
            android:key="systemNotificationSettings"
            android:title="@string/settingsNotificationSystemNotificationSettings"
            android:widgetLayout="@layout/m3_icon_frame_open" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settingsBehavior">

    <rikka.material.preference.MaterialSwitchPreference
            android:key="exportRulesAsLink"
            android:summary="@string/settingsBehaviorExportRulesAsLinkSummary"
            android:title="@string/settingsBehaviorExportRulesAsLink" />

    <rikka.material.preference.MaterialSwitchPreference
        android:key="enableDefaultUA"
        android:summary="@string/settingsBehaviorEnableDefaultUASummary"
        android:title="@string/settingsBehaviorEnableDefaultUA" />

        <EditTextPreference
            android:key="overrideUA"
            android:title="@string/settingsBehaviorOverrideUA"
            android:summary="@string/settingsBehaviorOverrideUASummary"
            android:defaultValue="" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settingsOthersTitle">

        <Preference
            android:key="backupAndRestore"
            android:title="@string/settingsOthersBackupAndRestore" />

        <Preference
            android:key="website"
            android:summary="@string/settingsOthersWebsiteSummary"
            android:title="@string/settingsOthersWebSite"
            android:widgetLayout="@layout/m3_icon_frame_open" />

        <Preference
            android:key="telegramChannel"
            android:summary="@string/settingsOthersTelegramChannelSummary"
            android:title="@string/settingsOthersTelegramChannel"
            android:widgetLayout="@layout/m3_icon_frame_open" />

        <Preference
            android:summary="@string/settingsOthersTranslatorSummary"
            android:title="@string/settingsOthersTranslator" />
    </PreferenceCategory>

    <Preference android:enabled="false" />

    <Preference android:enabled="false" />
</PreferenceScreen>