<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingEnd="25dp"
        android:paddingBottom="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/parameterRulesAddDialogTitle"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="?attr/colorOnSecondaryContainer" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pasteImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_paste"
                app:tint="?attr/colorOnSecondaryContainer" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/modeToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            app:checkedButton="@id/whiteListModeButton"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/whiteListModeButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/parameterRulesItemWhiteListMode" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/blackListModeButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/parameterRulesItemBlackListMode" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/parameterRulesItemDescription"
            app:endIconMode="clear_text">

            <cn.ac.lz233.tarnhelm.view.EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/parameterRulesItemDomain"
            app:endIconMode="clear_text">

            <cn.ac.lz233.tarnhelm.view.EditText
                android:id="@+id/domainEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/parameterRulesItemParameters"
            app:endIconMode="clear_text">

            <cn.ac.lz233.tarnhelm.view.EditText
                android:id="@+id/parametersEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parameterRulesItemAuthor"
            app:endIconMode="clear_text">

            <cn.ac.lz233.tarnhelm.view.EditText
                android:id="@+id/authorEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>